# DreamLite

./: .gitignore  .mise.toml  LICENSE  README.md  app.py  convert_to_diffusers.py  infer.py  infer_mobile.py  pyproject.toml  requirements.txt  sensitive_info_result.txt
diffusers/models/unets/: unet_2d_condition_mobile.py
dreamlite/: __init__.py
dreamlite/models/: __init__.py  attention.py  attention_processor.py  resnet.py
dreamlite/models/transformers/: transformer_2d.py
dreamlite/models/unets/: __init__.py  unet_2d_blocks.py  unet_2d_condition_mobile.py
dreamlite/pipelines/: __init__.py
dreamlite/pipelines/dreamlite/: __init__.py  face_swap.py  optimize.py  pipeline_dreamlite.py  pipeline_dreamlite_lora.py  pipeline_dreamlite_mobile.py  upscale.py
lora/: README.md  infer_lora.py  train_edit_lora.py  train_lora.py
modules/: dreamlite.json  model_utils.py  pipeline_utils.py  pipeline_utils_mobile.py
tools/: app.py
tools/benchmark/: infer_geneval.py  infer_imgedit.py
