[project]
name = "dreamlite"
version = "0.1.0"
description = "DreamLite: A Lightweight On-Device Unified Model for Image Generation and Editing"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "ByteVisionLab" },
]
dependencies = [
    "torch>=2.4",
    "torchvision",
    "numpy",
    "Pillow",
    "transformers==4.57.3",
    "diffusers>=0.30",
    "accelerate>=1.0",
    "gradio>=5.0",
    "safetensors",
    "datasets",
    "peft>=0.12",
    "tqdm",
    "einops",
    "bitsandbytes>=0.43",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dreamlite"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
