[project]
name = "dreamlite"
version = "0.1.0"
description = "DreamLite: A Lightweight On-Device Unified Model for Image Generation and Editing"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "ByteVisionLab" },
]
dependencies = [
    "torch>=2.4",
    "torchvision",
    "numpy",
    "Pillow",
    "transformers==4.57.3",
    "diffusers>=0.30",
    "accelerate>=1.0",
    "gradio>=5.0",
    "safetensors",
    "datasets",
    "peft>=0.12",
    "tqdm",
    "einops",
]

[project.optional-dependencies]
inductor = [
    "triton-windows>=3.2,<3.3; sys_platform == 'win32'",
]
quantize = [
    "bitsandbytes>=0.43",
]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]

[tool.uv]
find-links = [
    "https://download.pytorch.org/whl/cu124",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dreamlite"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
